--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/drawer": "^6.5.8",
-    "@react-navigation/material-top-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/stack": "^6.3.12",
+    "babel-plugin-react-native": "^1.0.1",
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-reanimated": "^3.0.0-rc.10",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-vector-icons": "^9.2.0"
   },
