--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/drawer": "^6.5.8",
+    "@react-navigation/material-top-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/stack": "^6.3.12",
     "babel-plugin-react-native": "^1.0.1",
@@ -23,6 +24,8 @@
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^3.0.0-rc.10",
     "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.19.0",
+    "react-native-tab-view": "^3.3.4",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
